# safe-app-utety-chat

./: .gitignore  AUDIT.md  CONTRIBUTORS.md  LICENSE  README.md  chat_db.py  chat_engine.py  persona_compiler.py  personas.py  pyproject.toml  requirements.txt  safe-app-manifest.json  safe_integration.py  server.py  wrangler.toml
core/: db.py
data/professors/: ada_context.md  ada_persona.json  alexis_context.md  alexis_persona.json  binder_context.md  binder_persona.json  consus_context.md  consus_persona.json  gerald_context.md  gerald_persona.json  hanz_context.md  hanz_persona.json  jane_context.md  jeles_context.md  jeles_persona.json  kart_context.md  kart_persona.json  mitra_context.md  mitra_persona.json  nova_context.md  nova_persona.json  oakenscroll_context.md  oakenscroll_persona.json  ofshield_persona.json  pigeon_context.md  pigeon_persona.json  professor-scan.py  riggs_context.md  riggs_persona.json  shiva_context.md  shiva_persona.json  steve_context.md  steve_persona.json  willow_context.md  willow_persona.json
functions/api/: chat.js
lib/: auth.ts
pipeline/: seed_professors.py
web/: chat.html  courses.html  dispatches.html  faculty.html  index.html  login.html  research.html  signup.html
web/papers/: alexis-appointment.md  dispatch-cosmic-retail-and-interdimensional-shoplifting.md  dispatch-dispatch-nine-the-starch-and-the-tart-bus.md  dispatch-gerald-and-the-logic-of-london-fog.md  dispatch-gerald-the-enlightened-overseer-of-dryer-14.md  dispatch-geralds-grand-unification-on-damp-napkins.md  fokker-planck-good-idea.md  (+35 more)
worker/: index.js
(+22 files in other folders)
