[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-app-utety-chat"
version = "1.0.0"
description = "Chat with UTETY professors - privacy-first conversational AI for SAFE framework"
authors = [{name = "Sean Campbell"}]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/rudi193-cmd/safe-app-utety-chat"
Repository = "https://github.com/rudi193-cmd/safe-app-utety-chat"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["utety_chat*"]
